--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,5 +29,6 @@ subjects:
 - !lcc 'PZ'
 - !lcsh 'Courage -- Juvenile fiction'
 - !lcsh 'Fires -- Juvenile fiction'
+- GITenberg
 title: 'Life in the Red Brigade: London Fire Brigade'
 url: http://www.gutenberg.org/ebooks/21695
